@@ -122,147 +122,6 @@ CexpSymRec key;
 				_cexp_namecomp);
 }
 
-#define USE_ELF_MEMORY
-
-#ifdef HAVE_RCMD
-#include <sys/time.h>
-#include <errno.h>
-#if !defined(HAVE_RTEMS_H) && defined(__rtems__)
-/* avoid pulling in networking headers under __rtems__
- * until BSP stuff is separated out from the core
- */
-#define	AF_INET	2
-extern char *inet_ntop();
-extern int	socket();
-extern int  select();
-#else
-#include <sys/socket.h>
-#include <arpa/inet.h>
-#endif
-
-#define RSH_PORT 514
-
-static char *
-handleInput(int fd, int errfd, unsigned long *psize)
-{
-long	n=0,size,avail;
-fd_set	r,w,e;
-char	errbuf[1000],*ptr,*buf;
-struct  timeval timeout;
-
-register long ntot=0,got,put,idx;
-
-	if (n<fd)		n=fd;
-	if (n<errfd)	n=errfd;
-
-	n++;
-
-	buf=ptr=0;
-	size=avail=0;
-
-	while (fd>=0 || errfd>=0) {
-		FD_ZERO(&r);
-		FD_ZERO(&w);
-		FD_ZERO(&e);
-
-		timeout.tv_sec=5;
-		timeout.tv_usec=0;
-		if (fd>=0) 		FD_SET(fd,&r);
-		if (errfd>=0)	FD_SET(errfd,&r);
-		if ((got=select(n,&r,&w,&e,&timeout))<=0) {
-				if (got) {
-					fprintf(stderr,"rsh select() error: %s.\n",
-							strerror(errno));
-				} else {
-					fprintf(stderr,"rsh timeout\n");
-				}
-				goto cleanup;
-		}
-		if (errfd>=0 && FD_ISSET(errfd,&r)) {
-				got=read(errfd,errbuf,sizeof(errbuf));
-				if (got<0) {
-					fprintf(stderr,"rsh error (reading stderr): %s.\n",
-							strerror(errno));
-					goto cleanup;
-				}
-				if (got) {
-					idx = 0;
-					do {
-						put = write(2,errbuf+idx,got);
-						if ( put <= 0 ) {
-							fprintf(stderr,"rsh error (writing stderr): %s.\n",
-									strerror(errno));
-							goto cleanup;
-						}
-						idx += put;
-						got -= put;
-					} while ( got > 0 );
-				} else {
-					errfd=-1; 
-				}
-		}
-		if (fd>=0 && FD_ISSET(fd,&r)) {
-				if (avail < LOAD_CHUNK) {
-					size+=LOAD_CHUNK; avail+=LOAD_CHUNK;
-					if (!(buf=realloc(buf,size))) {
-						fprintf(stderr,"out of memory\n");
-						goto cleanup;
-					}
-					ptr = buf + (size-avail);
-				}
-				got=read(fd,ptr,avail);
-				if (got<0) {
-					fprintf(stderr,"rsh error (reading stdout): %s.\n",
-							strerror(errno));
-					goto cleanup;
-				}
-				if (got) {
-					ptr+=got;
-					ntot+=got;
-					avail-=got;
-				} else {
-					fd=-1;
-				}
-		}
-	}
-	if (psize) *psize=ntot;
-	return buf;
-cleanup:
-	free(buf);
-	return 0;
-}
-
-char *
-rshLoad(char *host, char *user, char *cmd)
-{
-char	*chpt=host,*buf=0;
-int		fd,errfd;
-long	ntot;
-extern  int rcmd();
-
-	fd=rcmd(&chpt,RSH_PORT,user,user,cmd,&errfd);
-	if (fd<0) {
-		fprintf(stderr,"rcmd: got no remote stdout descriptor\n");
-		goto cleanup;
-	}
-	if (errfd<0) {
-		fprintf(stderr,"rcmd: got no remote stderr descriptor\n");
-		goto cleanup;
-	}
-
-	if (!(buf=handleInput(fd,errfd,&ntot))) {
-		goto cleanup; /* error message has already been printed */
-	}
-
-	fprintf(stderr,"0x%lx (%li) bytes read\n",ntot,ntot);
-
-cleanup:
-	if (fd>=0)		close(fd);
-	if (errfd>=0)	close(errfd);
-	return buf;
-}
-#endif
-
 /* a semi-public routine which takes a precompiled regexp.
  * The reason this is not public is that we try to keep
  * the public from having to deal with/know about the regexp
